--- a/Part 06 Complete Webiste/templates/analytics.html
+++ b/Part 06 Complete Webiste/templates/analytics.html
@@ -46,8 +46,10 @@
           if (!response.ok) {
             throw new Error("Failed to fetch product analytics.");
           }
+          let data = await response.json();
+          // Sort the products array by hits count in descending order
+          data.products.sort((a, b) => b.hits - a.hits);
 
-          const data = await response.json();
           return data.products;
         } catch (error) {
           console.error("Error:", error);
